--- a/SPOILERS/Paper_Plots/H1C_IDR3_Paper_Plots.ipynb
+++ b/SPOILERS/Paper_Plots/H1C_IDR3_Paper_Plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6eea8d98",
    "metadata": {
     "ExecuteTime": {
@@ -10,16 +10,7 @@
      "start_time": "2022-05-26T21:05:35.151985Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/users/jsdillon/lustre/tmp/ipykernel_31031/1586987634.py:18: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
-      "  from IPython.core.display import display, HTML\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import glob\n",
@@ -3290,6 +3281,77 @@
     "plt.tight_layout()\n",
     "plt.savefig('power_spectrum_posteriors.pdf', bbox_inches=\"tight\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ee06a7b",
+   "metadata": {},
+   "source": [
+    "# Per-Epoch Bias Jackknife Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20dbbdbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def two_jk_wrapper_IDR3(odds_dir=\"bias_jackknife\", figsize=(16, 8), alpha=1, bands='12', xlim=[0.18, 2.00],\n",
+    "                        ylim=[8e-7, 2e6], ticklen=10, bandlabel_x=0.02, bandlabel_y=0.1, delin_alpha=0.3,\n",
+    "                        delin_wid=1, ylabel=f\"Odds of at least One \\n Significantly Biased Epoch\",\n",
+    "                        xlabel=\"$k$ $(h$ Mpc$^{-1}$\", marker='.',\n",
+    "                        lst_colors=['goldenrod', 'mediumturquoise', 'mediumvioletred', 'mediumorchid'],\n",
+    "                        lw=2, fields='BCDE', dashz=-200, plot_z=True, line=True,\n",
+    "                        markersize=10, xwid=2, shade_alpha=0.1, dash=False, shade=True):\n",
+    "    \n",
+    "    fig, ax = plt.subplots(figsize=figsize, nrows=2, ncols=1)\n",
+    "    for plot_ind, band in enumerate(bands):\n",
+    "        for field_ind, field in enumerate(fields):\n",
+    "            ks, odds = np.load(f\"{odds_dir}/jackknife_odds_band_{band}_field_{field}.npy\")\n",
+    "\n",
+    "\n",
+    "            \n",
+    "\n",
+    "            color = lst_colors[field_ind]\n",
+    "            if line:\n",
+    "                ax[plot_ind].plot(ks, odds, color=color, label=field, marker=marker, markersize=markersize,\n",
+    "                                  alpha=alpha, lw=lw)\n",
+    "            else:\n",
+    "                ax[plot_ind].scatter(ks, odds, color=color, label=field, marker=marker, alpha=alpha)\n",
+    "\n",
+    "            if dash:\n",
+    "                ax[plot_ind].axhline(1, linestyle='--', color='black', zorder=dashz)\n",
+    "                ax[plot_ind].axhline(10, linestyle='--', color='red', zorder=dashz)\n",
+    "\n",
+    "            ax[plot_ind].tick_params(labelsize=\"xx-large\")\n",
+    "\n",
+    "        ax[plot_ind].text(x=bandlabel_x, y=bandlabel_y, s = f\"Band {band}\", fontsize=\"xx-large\",\n",
+    "                          transform=ax[plot_ind].transAxes, bbox=dict(facecolor='w', alpha=0.9, boxstyle='round'))\n",
+    "        ax[plot_ind].set_yscale(\"log\")\n",
+    "        ax[plot_ind].set_ylim(ylim)\n",
+    "        ax[plot_ind].set_ylabel(ylabel, fontsize=\"xx-large\")\n",
+    "        ax[plot_ind].set_xlim(xlim)\n",
+    "        if shade:\n",
+    "            ax[plot_ind].axhspan(ymin=1e0, ymax=1e10, alpha=shade_alpha, color=\"gray\")\n",
+    "            ax[plot_ind].axhspan(ymin=1e1, ymax=1e10, alpha=shade_alpha, color=\"gray\")\n",
+    "            ax[plot_ind].axhline(10, alpha=delin_alpha, color=\"gray\", lw=delin_wid)\n",
+    "            ax[plot_ind].axhline(1, alpha=delin_alpha, color=\"gray\", lw=delin_wid)\n",
+    "    ax[0].set_xticklabels([])\n",
+    "    ax[0].tick_params(axis='x', direction='in', length=ticklen)\n",
+    "    ax[1].tick_params(axis='x', direction='out', length=ticklen)\n",
+    "    ax[0].set_xlabel(None)\n",
+    "    ax[1].set_xlabel(xlabel, fontsize=\"xx-large\")\n",
+    "    ax[0].legend(fontsize=\"xx-large\", frameon=True, ncol=2, loc=\"upper right\")\n",
+    "    fig.tight_layout(h_pad=0)\n",
+    "    fig.savefig(\"jackknife_two_panel.pdf\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "two_jk_wrapper_IDR3()"
+   ]
   }
  ],
  "metadata": {
@@ -3308,7 +3370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.1"
   },
   "toc": {
    "base_numbering": 1,
